samples/_failures_safe/1761429260_1f3653_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bb612b4.c: In function ‘main’:
./samples/SAFE/__tmp_5bb612b4.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_5bb612b4.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bb612b4.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bb612b4.c:150:21: error: expected declaration or statement at end of input
